[gd_scene load_steps=2 format=3 uid="uid://djpy78eboofby"]

[ext_resource type="Script" uid="uid://bhgfqmrmhg164" path="res://Scripts/hud.gd" id="1_sd512"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sd512")

[node name="HealthLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 10.0
offset_right = 98.0
offset_bottom = 33.0
text = "Health: 100"

[node name="WeaponLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 40.0
offset_right = 125.0
offset_bottom = 63.0
text = "Weapon: Pistol"

[node name="AmmoLabel" type="Label" parent="."]
offset_left = 10.0
offset_top = 70.0
offset_right = 50.0
offset_bottom = 93.0
text = "Ammo: N/A"
